--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.css" rel="stylesheet" />
     <link rel="shortcut icon" href="images/favicon.jpg" type="image/x-icon">
-    <link href="../pr/css/ext.css" rel="stylesheet" />
+    <link href="css/ext.css" rel="stylesheet" />
   </head>
 
   <body>
