--- a/index.html
+++ b/index.html
@@ -38,18 +38,18 @@
           </a>
         </button>
         <div class="logo">
-          <img src="../pr/images/logo.png" alt="logo">
+          <img src="images/logo.png" alt="logo">
         </div>
 
         <div class="nav-links">
           <div class="nav-class">
             <nav>
               <ul>
-                <li><a href="../pr/index.html">NEW IN</a></li>
+                <li><a href="index.html">NEW IN</a></li>
                 <li><a href="javascript:void(0)">ALL CLOTHING</a></li>
-                <li><a href="../pr/Ethnicwear.html">SHOP</a></li>
-                <li><a href="../pr/collection.html">COLLECTION</a></li>
-                <li><a href="../pr/contact.html">CONTACT US</a></li>
+                <li><a href="Ethnicwear.html">SHOP</a></li>
+                <li><a href="collection.html">COLLECTION</a></li>
+                <li><a href="contact.html">CONTACT US</a></li>
 
               </ul>
             </nav>
@@ -60,7 +60,7 @@
             <li><a href="javascript:void(0)" class="login-page">Login</a></li>
             <li><a href="javascript:void(0)" class="sign-page">Sign Up</a></li>
             <a href="javascript:void(0)"><i class="fa-solid fa-heart"></i></a>
-            <a href="../pr/cart-section.html"><i class="fa-solid fa-bag-shopping"></i></a>
+            <a href="cart-section.html"><i class="fa-solid fa-bag-shopping"></i></a>
           </ul>
         </div>
       </div>
@@ -72,13 +72,13 @@
     <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="../pr/images/top1.webp" class="d-block w-100" alt="...">
+          <img src="images/top1.webp" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-          <img src="../pr/images/top2.webp" class="d-block w-100" alt="...">
+          <img src="images/top2.webp" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-          <img src="../pr/images/top3.webp" class="d-block w-100" alt="...">
+          <img src="images/top3.webp" class="d-block w-100" alt="...">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
@@ -107,23 +107,23 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-lg-2 manage-img">
-            <img src="../pr/images/fld/1.jpg" alt="">
+            <img src="images/fld/1.jpg" alt="">
 
             <hr>
             <p>Women Jeans Jackets</p>
           </div>
           <div class="col-lg-2 manage-img ">
-            <img src="../pr/images/fld/2.jpg" alt="">
+            <img src="images/fld/2.jpg" alt="">
             <hr>
             <p>Full lenght Sleev less Dress</p>
           </div>
           <div class="col-lg-2 manage-img">
-            <img src="../pr/images/fld/3.jpg" alt="">
+            <img src="images/fld/3.jpg" alt="">
             <hr>
             <p>Summer top</p>
           </div>
           <div class="col-lg-2 manage-img">
-            <img src="../pr/images/fld/4.jpg" alt="">
+            <img src="images/fld/4.jpg" alt="">
             <hr>
             <p>Sleeveless dress with jacket</p>
           </div>
@@ -133,7 +133,7 @@
             <p>Deep neck white t-shirt</p>
           </div>
           <div class="col-lg-2 manage-img">
-            <img src="../pr/images/fld/6.jpg" alt="">
+            <img src="images/fld/6.jpg" alt="">
             <hr>
             <p>Winter coat</p>
           </div>
@@ -144,7 +144,7 @@
 
     <div class="personal-shop">
       <div class="animated-image">
-        <img src="../pr/images/slid-1.jpg" alt="">
+        <img src="images/slid-1.jpg" alt="">
       </div>
       <div class="shop-detail">
         <h3>Welcome to me</h3>
@@ -160,62 +160,62 @@
       <h2>Our Few collection</h2>
       <p>Pick Your choice</p>
       <div class="owl-carousel owl-theme manage-slider">
-        <div class="item cart-effect"><img src="../pr/images/shop-02.jpg" alt="Black white long sleeve t-shirt">
+        <div class="item cart-effect"><img src="images/shop-02.jpg" alt="Black white long sleeve t-shirt">
           <div class="price-detail-pos">
             <p><a href="javascript:void(0)">$250</a></p>
           </div>
         </div>
-        <div class="item cart-effect"><img src="../pr/images/shop-03.jpg" alt="Heather grey pullover">
+        <div class="item cart-effect"><img src="images/shop-03.jpg" alt="Heather grey pullover">
           <div class="price-detail-pos">
             <p><a href="javascript:void(0)">$600</a></p>
           </div>
         </div>
-        <div class="item cart-effect"><img src="../pr/images/shop-04.jpg" alt="White Sport">
+        <div class="item cart-effect"><img src="images/shop-04.jpg" alt="White Sport">
           <div class="price-detail-pos">
             <p><a href="javascript:void(0)">$350</a></p>
           </div>
         </div>
-        <div class="item cart-effect"><img src="../pr/images/shop-05.jpg" alt="Slim Short Dress">
+        <div class="item cart-effect"><img src="images/shop-05.jpg" alt="Slim Short Dress">
           <div class="price-detail-pos">
             <p><a href="javascript:void(0)">$320</a></p>
           </div>
         </div>
-        <div class="item cart-effect"><img src="../pr/images/shop-06.jpg" alt="Black T-shirt">
+        <div class="item cart-effect"><img src="images/shop-06.jpg" alt="Black T-shirt">
           <div class="price-detail-pos">
             <p><a href="javascript:void(0)">$500</a></p>
           </div>
         </div>
-        <div class="item cart-effect"><img src="../pr/images/shop-07.jpg" alt="Heather grey long sleeve crop top">
+        <div class="item cart-effect"><img src="images/shop-07.jpg" alt="Heather grey long sleeve crop top">
           <div class="price-detail-pos">
             <p><a href="javascript:void(0)">$70</a></p>
           </div>
         </div>
-        <div class="item cart-effect"><img src="../pr/images/shop-08.jpg" alt="Heather grey Hoddie">
+        <div class="item cart-effect"><img src="images/shop-08.jpg" alt="Heather grey Hoddie">
           <div class="price-detail-pos">
             <p><a href="javascript:void(0)">$450</a></p>
           </div>
         </div>
-        <div class="item cart-effect"><img src="../pr/images/shop-09.jpg" alt="White tucked sleev t-shirts">
+        <div class="item cart-effect"><img src="images/shop-09.jpg" alt="White tucked sleev t-shirts">
           <div class="price-detail-pos">
             <p><a href="javascript:void(0)">$455</a></p>
           </div>
         </div>
-        <div class="item cart-effect"><img src="../pr/images/shop-10.jpg" alt="White Pullover">
+        <div class="item cart-effect"><img src="images/shop-10.jpg" alt="White Pullover">
           <div class="price-detail-pos">
             <p><a href="javascript:void(0)">$300</a></p>
           </div>
         </div>
-        <div class="item cart-effect"><img src="../pr/images/shop-11.jpg" alt="White Tank Top">
+        <div class="item cart-effect"><img src="images/shop-11.jpg" alt="White Tank Top">
           <div class="price-detail-pos">
             <p><a href="javascript:void(0)">$100</a></p>
           </div>
         </div>
-        <div class="item cart-effect"><img src="../pr/images/shop-12.jpg" alt="Black t-shirt long neck">
+        <div class="item cart-effect"><img src="images/shop-12.jpg" alt="Black t-shirt long neck">
           <div class="price-detail-pos">
             <p><a href="javascript:void(0)">$250</a></p>
           </div>
         </div>
-        <div class="item cart-effect"><img src="../pr/images/shop-01.jpg" alt="Black Tank Top">
+        <div class="item cart-effect"><img src="images/shop-01.jpg" alt="Black Tank Top">
           <div class="price-detail-pos">
             <p><a href="javascript:void(0)">$150</a></p>
           </div>
@@ -227,22 +227,22 @@
     <div class="container">
       <div class="row manage-common-img">
         <div class="col-lg-2 col-4">
-          <img src="../pr/images/h3-list-img-24.jpg" alt="">
+          <img src="images/h3-list-img-24.jpg" alt="">
         </div>
         <div class="col-lg-2 col-4">
-          <img src="../pr/images/h3-list-img-16.jpg" alt="">
+          <img src="images/h3-list-img-16.jpg" alt="">
         </div>
         <div class="col-lg-2 col-4">
-          <img src="../pr/images/h3-list-img-19c.jpg" alt="">
+          <img src="images/h3-list-img-19c.jpg" alt="">
         </div>
         <div class="col-lg-2 col-4">
-          <img src="../pr/images/h3-list-img-9.jpg" alt="">
+          <img src="images/h3-list-img-9.jpg" alt="">
         </div>
         <div class="col-lg-2 col-4">
-          <img src="../pr/images/h3-list-img-14.jpg" alt="">
+          <img src="images/h3-list-img-14.jpg" alt="">
         </div>
         <div class="col-lg-2 col-4">
-          <img src="../pr/images/h3-list-img-13.jpg" alt="">
+          <img src="images/h3-list-img-13.jpg" alt="">
         </div>
       </div>
     </div>
@@ -409,7 +409,7 @@
     </div>
     </div>
 
-    <script src="../pr/js/attire-js.js"></script>
+    <script src="js/attire-js.js"></script>
     <script>
 
 
